# Card-Rogue-Like-Engine

./: CMakeLists.txt
demo/EnemySpider/: art.txt  move_pool.txt
demo/SelfCatWarrior/: card_pool.txt  starting_deck.txt
src/: main.c
src/config_io/: directory_reader.c  directory_reader.h  parsing.c  parsing.h  parsing_common_state.c  parsing_common_state.h  parsing_enemy_state.c  parsing_enemy_state.h  parsing_self_state.c  parsing_self_state.h  stream_common.c  stream_common.h  stream_enemy_move.c  stream_enemy_move.h  stream_self_card.c  stream_self_card.h  text_stream.c  text_stream.h
src/core/: core_utilities.c  core_utilities.h  enemy.h  enemy_state.c  enemy_state.h  game_state.c  game_state.h  self.c  self.h  self_state.c  self_state.h
src/graphics/: battle_view.c  battle_view.h  core_graphics.c  core_graphics.h  enemy_view.c  enemy_view.h  messages.h  self_view.c  self_view.h
src/parsing/: parsing.c  parsing.h  parsing_self_card.c  parsing_self_card.h
test/: CMakeLists.txt  ParsingTest.cpp  SelfStateTest.cpp  main.cpp
